--- a/frontend/src/styles/_kowloon-icons.css
+++ b/frontend/src/styles/_kowloon-icons.css
@@ -29,5 +29,5 @@
 .kowicon-cats:before{content:'\0049';}
 .kowicon-plus:before{content:'\004a';}
 .kowicon-k:before{content:'\004b';}
-.kowicon-product_icon:before{content:'\004c';}
+.kowicon-product:before{content:'\004c';}
 .kowicon-enter:before{content:'\004d';}
