--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -129,5 +129,8 @@ a {
 @import "general/_product";
 @import "general/_big-search";
 @import "general/_jumbotron-slider";
+@import "general/_breadcrumbs";
 @import "search/_search";
+@import "general/_filter";
 @import "_faq";
+@import "_category";
