--- a/frontend/src/styles/search/_search.scss
+++ b/frontend/src/styles/search/_search.scss
@@ -1,25 +1,6 @@
-.advanced-search-toggle {
-  cursor: pointer;
-}
-
-.filter {
-  margin-bottom: 150px;
-}
-
-.slider {
-  margin-top: 7px;
-  margin-bottom: 20px;
-}
-
-.price-range {
-  .input-group {
-    .input-group-addon {
-      background: #fff;
-    }
-    .form-control {
-      border-left: none;
-      text-align: center;
-    }
+.container.search {
+  .filter {
+    margin-bottom: 150px;
   }
 }
 
