--- a/frontend/src/app/category/category.html
+++ b/frontend/src/app/category/category.html
@@ -1,58 +1,62 @@
 <jumbotron-slider slides="category.slides"></jumbotron-slider>
 
-<div class="container">
+<div class="container container-category">
 
-  <span class="kowicon-k collapsed"></span>
+  <section class="breadcrumbs">
+    <a class="logo kowicon-k"></a>
+    <a class="tag tag-category">Dogs</a>
+    <a class="tag">Splash 'n Fun</span>
+  </section>
 
-  <h1>Dog articles</h1>
+  <h1 class="text-uppercase">Dog articles</h1>
 
-  <h2 ng-click="filterCollapsed = !filterCollapsed" ng-init="filterCollapsed = true" class="advanced-search-toggle">
-    Filter
-    <small>
-      <span class="glyphicon glyphicon-triangle-bottom" ng-hide="filterCollapsed" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-triangle-right" ng-hide="!filterCollapsed" aria-hidden="true"></span>
-    </small>
-  </h2>
+  <div class="filter filter-light">
+    <h2 ng-click="filterCollapsed = !filterCollapsed" ng-init="filterCollapsed = true" class="advanced-search-toggle small-header">
+      Filter
+      <small>
+        <span class="glyphicon glyphicon-triangle-bottom" ng-hide="filterCollapsed" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-triangle-right" ng-hide="!filterCollapsed" aria-hidden="true"></span>
+      </small>
+    </h2>
 
-  <div uib-collapse="filterCollapsed">
+    <div class="filter-collapse" uib-collapse="filterCollapsed">
 
-    <h3>By collection</h3>
-    <label class="checkbox-inline" ng-repeat="collection in category.collections">
-      <input type="checkbox" value="{{category}}"> {{category}}
-    </label>
+      <h3>By collection</h3>
+      <label class="checkbox-inline" ng-repeat="collection in category.collections">
+        <input type="checkbox" value="{{collection}}"> {{collection}}
+      </label>
 
-    <h3>Price range</h3>
-    <div class="row">
-      <div class="col-md-6 price-range">
-        <slider ng-model="search.price" range="true" min="0" step="1" tooltip="hide" max="500" value="testOptions.value"></slider>
-      </div>
+      <h3>Price range</h3>
 
-      <div class="col-md-6">
-        <div class="col-md-5">
-          <div class="input-group input-group-lg">
-            <span class="input-group-addon">&euro;</span>
-            <input type="text" ng-model="search.price[0]" ng-value="search.price[0] | number : 2" class="form-control">
+      <div class="row price-range">
+        <div class="col-md-6">
+          <slider class="slider-light" ng-model="category.filter.price" range="true" min="0" step="1" tooltip="hide" max="500" value="testOptions.value"></slider>
+        </div>
+        <div class="col-md-6">
+          <div class="col-md-5">
+            <div class="input-group input-group-lg">
+              <span class="input-group-addon">&euro;</span>
+              <input type="text" ng-model="category.filter.price[0]" ng-value="category.filter.price[0] | number : 2" class="form-control">
+            </div>
+          </div>
+          <div class="col-md-2 text-center">
+            <p class="h4">-</p>
+          </div>
+          <div class="col-md-5">
+            <div class="input-group input-group-lg">
+              <span class="input-group-addon">&euro;</span>
+              <input type="text" ng-model="category.filter.price[1]" ng-value="category.filter.price[1] | number : 2" class="form-control">
+            </div>
           </div>
         </div>
-        <div class="col-md-2 text-center">
-          <p class="h4">-</p>
-        </div>
-        <div class="col-md-5">
-          <div class="input-group input-group-lg">
-            <span class="input-group-addon">&euro;</span>
-            <input type="text" ng-model="search.price[1]" ng-value="search.price[0] | number : 2" class="form-control">
-          </div>
-        </div>
       </div>
+
     </div>
-    <!-- end-prive-range-row -->
-
   </div>
-  <!-- end-filter -->
 
   <hr>
 
-  <div class="btn-group" uib-dropdown keyboard-nav>
+  <div class="btn-group btn-sorting" uib-dropdown keyboard-nav>
     <button type="button" class="btn btn-dark" uib-dropdown-toggle>
       Sort by relevance <span class="caret"></span>
     </button>
@@ -65,10 +69,14 @@
   </div>
 
 
+  <span class="pull-right">Dog items: <strong>5 of 44</strong></span>
+
+
   <div class="row">
-    <div class="col-md-6">
-      <div class="product">
-        <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
+    <div class="col-md-6 col-md-push-6">
+      <div class="product product-featured">
+        <div class="image">
+          <img src="images/products/cooling_mat.jpg" alt="Cooling Mat">
           <ul class="colors">
             <li style="background: white;">White</li>
             <li style="background: black;">Black</li>
@@ -84,10 +92,11 @@
             at blandit odio justo elementum ipsum. Etiam gravida quam a ex feugiat, et fermentum justo viverra.
           </p>
           <span class="price">&euro; 15,49</span>
+          <a href="#" class="btn btn-pink btn-more-info pull-right">Want to know more?</a>
         </div>
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 col-md-pull-6">
       <div class="row">
         <div class="col-md-6">
           <div class="product">
@@ -155,17 +164,15 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="product">
+          <div class="product multiple-images">
             <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
               <div class="overlay">
                 <span class="kowicon-product"></span>
                 view details
               </div>
-              <ul class="colors">
-                <li style="background: white;">White</li>
-                <li style="background: black;">Black</li>
-                <li style="background: blue;">Blue</li>
-              </ul>
+              <div class="photo-count">
+                4
+              </div>
             </div>
             <div class="information">
               <a href="#" class="title">
