fixed subscribe to newsletter in FE

--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -143,29 +143,6 @@
     </div>
   </div>
 
-  <div class="row newsletter">
-    <div class="col-md-8 bg">
-      <h1>
-        discover amazing Kowloon deals!
-        <span>
-          only in our newsletter
-        </span>
-      </h1>
-    </div>
-    <div class="col-md-4 form">
-      <div>
-        <h2>Subscribe to our newsletter</h2>
-        <p>Lorum ipsum dolor sit amet.</p>
-
-        <div class="input-group input-group-lg">
-          <input type="text" class="form-control" placeholder="Name @ domain.com">
-          <span class="input-group-btn">
-            <button class="btn btn-dark" type="button">OK</button>
-          </span>
-        </div>
-
-      </div>
-    </div>
-  </div>
+  <newsletter-subscribe></newsletter-subscribe>
 
 </div><!-- container-end -->
