--- a/frontend/src/styles/_product-detail.scss
+++ b/frontend/src/styles/_product-detail.scss
@@ -3,8 +3,10 @@
     background-color: $lightColor2;
     border: 1px solid $lightColor;
     padding: 6px;
-    .image {
+    padding-bottom: 0;
+    & > .image {
       position: relative;
+      margin-bottom: 6px;
       .expand {
         height: 41px;
         width: 41px;
@@ -17,8 +19,7 @@
           display: block;
           border-left: 41px solid transparent;
           border-top: 41px solid white;
-          &:hover {
-          }
+          &:hover {}
         }
         .kowicon {
           position: absolute;
@@ -29,6 +30,26 @@
       }
       img {
         width: 100%;
+      }
+    }
+    .thumbnails {
+      .thumb {
+        .image {
+          background-color: #fff;
+          img {
+            width: 100%;
+            opacity: 0.65;
+          }
+        }
+        .title {
+          font-size: 0.85em;
+        }
+        &.active {
+          .image img {
+            border: 2px solid white;
+            opacity: 1;
+          }
+        }
       }
     }
   }
