--- a/frontend/src/app/product/product.html
+++ b/frontend/src/app/product/product.html
@@ -31,26 +31,82 @@
 
       <h1 class="text-uppercase">Cooling mat</h1>
 
-      <h2>&euro; 15,49</h2>
+      <span class="price">&euro; 15,49</span>
 
-      <h3>Colors</h3>
+      <h2>Colors</h2>
+      <ul class="colors">
+        <li style="background: white;">White</li>
+        <li style="background: black;">Black</li>
+        <li style="background: blue;">Blue</li>
+      </ul>
 
-      <h3>Description</h3>
+      <h2>Description</h2>
       <p>Hier komt een de volledige beschrijvende tekst met een max. aantal karakters. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea clit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat consectetur.</p>
     </div>
   </div>
 
-  <hr>
+  <div class="specifications">
+    <h2>Specifications</h2>
 
-  <h3>Specifications</h3>
+    <h3 class="text-uppercase">Dimensions</h3>
+    <p>
+      <span><strong>S</strong> - &empty; 53x18cm</span>
+      <span><strong>M</strong> - &empty; 53x18cm</span>
+      <span><strong>L</strong> - &empty; 53x18cm</span>
+    </p>
 
-  <h4 class="text-uppercase">Dimensions</h4>
+    <h3 class="text-uppercase">Title</h3>
+    <p>
+      <span><strong>S</strong> - hier komt technische tekst</span>
+    </p>
 
-  <h4 class="text-uppercase">Title</h4>
-
-  <hr>
+  </div>
 
   <div class="related-products">
     <h2 class="text-uppercase">Related products</h2>
+
+    <div class="slider">
+      <div class="frame" id="relatedSly" >
+        <div class="slidee">
+          <div class="slide product" ng-repeat="related in product.relatedProducts" sly-horizontal-repeat>
+            <div class="image" ng-style="{backgroundImage: 'url('+related.url+')'}">
+              <div class="overlay">
+                <span class="kowicon-product"></span>
+                view details
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="controls">
+        <button class="prevPage"><span class="kowicon kowicon-prev"></span></button>
+        <button class="nextPage"><span class="kowicon kowicon-next"></span></button>
+      </div>
+    </div>
+
+    <div class="bottom-links">
+      <a href="#">view more</a>
+    </div>
   </div>
+
+  <div class="product-faq">
+
+  <uib-accordion>
+      <div uib-accordion-group class="panel-dark" is-open="status[$index].open" ng-repeat="faq in product.faq track by $index">
+        <uib-accordion-heading>
+          <i class="pull-right glyphicon" ng-class="{'glyphicon-triangle-bottom': status[$index].open, 'glyphicon-triangle-right': !status[$index].open}"></i>
+          {{faq.question}}
+        </uib-accordion-heading>
+        {{faq.answer}}
+      </div>
+    </uib-accordion>
+
+    <div class="bottom-links">
+      <a href="#">More questions?</a>
+    </div>
+  </div>
+
+  <newsletter-subscribe></newsletter-subscribe>
+
 </div>
