added filtering in category view

--- a/frontend/src/app/layout/sidebar.html
+++ b/frontend/src/app/layout/sidebar.html
@@ -17,9 +17,9 @@
     </li>
     <li class="divider"></li>
     <li>
-      <a href="#" title="Contact">
+      <a href="#" title="About" ui-sref="about" ui-sref-active="active">
         <span class="kowicon-contact"></span>
-        Contact
+        About us
       </a>
     </li>
     <li class="divider"></li>
