--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -195,5 +195,6 @@ a {
 @import "general/_newsletter";
 @import "_faq";
 @import "_category";
+@import "_about";
 @import "general/_horizontal-slider";
 @import "_product-detail";
