--- a/frontend/src/app/category/category.html
+++ b/frontend/src/app/category/category.html
@@ -23,7 +23,7 @@
 
       <h3>By collection</h3>
       <label class="checkbox-inline" ng-repeat="collection in category.collections">
-        <input type="checkbox" value="{{collection}}"> {{collection}}
+        <input type="checkbox" ng-model="collection.on" ng-change="category.checkChange()">{{collection.name}}
       </label>
 
       <h3>Price range</h3>
@@ -68,9 +68,13 @@
     </ul>
   </div>
 
-
   <span class="pull-right">Dog items: <strong>5 of 44</strong></span>
 
+  <ul>
+    <li ng-repeat="product in category.products | filter:category.collectionFilter | filter:category.priceFilter | limitTo:4:0">
+      {{product.name}}
+    </li>
+  </ul>
 
   <div class="row">
     <div class="col-md-6 col-md-push-6">
@@ -98,7 +102,7 @@
     </div>
     <div class="col-md-6 col-md-pull-6">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" ng-repeat="product in category.products | filter:category.collectionFilter | filter:category.priceFilter | limitTo:4:0">
           <div class="product">
             <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
               <div class="overlay">
@@ -113,56 +117,14 @@
             </div>
             <div class="information">
               <a href="#" class="title">
-                Cooling mat
+                {{product.name}}
               </a>
-              <span class="price">&euro; 15,49</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="product">
-            <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
-              <div class="overlay">
-                <span class="kowicon-product"></span>
-                view details
-              </div>
-              <ul class="colors">
-                <li style="background: white;">White</li>
-                <li style="background: black;">Black</li>
-                <li style="background: blue;">Blue</li>
-              </ul>
-            </div>
-            <div class="information">
-              <a href="#" class="title">
-                Cooling mat
-              </a>
-              <span class="price">&euro; 15,49</span>
+              <span class="price">&euro; {{product.price}}</span>
             </div>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
-          <div class="product">
-            <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
-              <div class="overlay">
-                <span class="kowicon-product"></span>
-                view details
-              </div>
-              <ul class="colors">
-                <li style="background: white;">White</li>
-                <li style="background: black;">Black</li>
-                <li style="background: blue;">Blue</li>
-              </ul>
-            </div>
-            <div class="information">
-              <a href="#" class="title">
-                Cooling mat
-              </a>
-              <span class="price">&euro; 15,49</span>
-            </div>
-          </div>
-        </div>
         <div class="col-md-6">
           <div class="product multiple-images">
             <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
