--- a/frontend/src/styles/general/_product.scss
+++ b/frontend/src/styles/general/_product.scss
@@ -13,6 +13,7 @@
   }
   &.multiple-images {
     margin-right: 15px;
+    margin-bottom: 30px;
     top: 15px;
     outline: 3px solid #454545;
     &:before,
