--- a/frontend/src/app/category/category.html
+++ b/frontend/src/app/category/category.html
@@ -33,16 +33,16 @@
           <slider class="slider-light" ng-model="category.filter.price" range="true" min="0" step="1" tooltip="hide" max="500" value="testOptions.value"></slider>
         </div>
         <div class="col-md-6">
-          <div class="col-md-5">
+          <div class="col-xs-5">
             <div class="input-group input-group-lg">
               <span class="input-group-addon">&euro;</span>
               <input type="text" ng-model="category.filter.price[0]" ng-value="category.filter.price[0] | number : 2" class="form-control">
             </div>
           </div>
-          <div class="col-md-2 text-center">
+          <div class="col-xs-2 text-center">
             <p class="h4">-</p>
           </div>
-          <div class="col-md-5">
+          <div class="col-xs-5">
             <div class="input-group input-group-lg">
               <span class="input-group-addon">&euro;</span>
               <input type="text" ng-model="category.filter.price[1]" ng-value="category.filter.price[1] | number : 2" class="form-control">
@@ -70,12 +70,6 @@
 
   <span class="pull-right">Dog items: <strong>5 of 44</strong></span>
 
-  <ul>
-    <li ng-repeat="product in category.products | filter:category.collectionFilter | filter:category.priceFilter | limitTo:4:0">
-      {{product.name}}
-    </li>
-  </ul>
-
   <div class="row">
     <div class="col-md-6 col-md-push-6">
       <div class="product product-featured">
@@ -88,7 +82,7 @@
           </ul>
         </div>
         <div class="information">
-          <a href="#" class="title">
+          <a ui-sref="product" class="title">
             Cooling mat
           </a>
           <p>
@@ -96,27 +90,30 @@
             at blandit odio justo elementum ipsum. Etiam gravida quam a ex feugiat, et fermentum justo viverra.
           </p>
           <span class="price">&euro; 15,49</span>
-          <a href="#" class="btn btn-pink btn-more-info pull-right">Want to know more?</a>
+          <a ui-sref="product" class="btn btn-pink btn-more-info pull-right">Want to know more?</a>
         </div>
       </div>
     </div>
     <div class="col-md-6 col-md-pull-6">
       <div class="row">
         <div class="col-md-6" ng-repeat="product in category.products | filter:category.collectionFilter | filter:category.priceFilter | limitTo:4:0">
-          <div class="product">
+          <div class="product" ng-class="{'multiple-images' : product.multipleImages}">
             <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
-              <div class="overlay">
+              <a ui-sref="product" class="overlay">
                 <span class="kowicon-product"></span>
                 view details
+              </a>
+              <div class="photo-count" ng-show="product.multipleImages">
+                4
               </div>
-              <ul class="colors">
+              <ul class="colors" ng-show="product.colors">
                 <li style="background: white;">White</li>
                 <li style="background: black;">Black</li>
                 <li style="background: blue;">Blue</li>
               </ul>
             </div>
             <div class="information">
-              <a href="#" class="title">
+              <a ui-sref="product" class="title">
                 {{product.name}}
               </a>
               <span class="price">&euro; {{product.price}}</span>
@@ -124,25 +121,31 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="product multiple-images">
-            <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
-              <div class="overlay">
-                <span class="kowicon-product"></span>
-                view details
-              </div>
-              <div class="photo-count">
-                4
-              </div>
-            </div>
-            <div class="information">
-              <a href="#" class="title">
-                Cooling mat
-              </a>
-              <span class="price">&euro; 15,49</span>
-            </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3" ng-repeat="product in category.products | filter:category.collectionFilter | filter:category.priceFilter | limitTo:4:0">
+      <div class="product" ng-class="{'multiple-images' : product.multipleImages}">
+        <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
+          <a ui-sref="product" class="overlay">
+            <span class="kowicon-product"></span>
+            view details
+          </a>
+          <div class="photo-count" ng-show="product.multipleImages">
+            4
           </div>
+          <ul class="colors" ng-show="product.colors">
+            <li style="background: white;">White</li>
+            <li style="background: black;">Black</li>
+            <li style="background: blue;">Blue</li>
+          </ul>
+        </div>
+        <div class="information">
+          <a ui-sref="product" class="title">
+            {{product.name}}
+          </a>
+          <span class="price">&euro; {{product.price}}</span>
         </div>
       </div>
     </div>
