--- a/frontend/src/styles/_faq.scss
+++ b/frontend/src/styles/_faq.scss
@@ -1,13 +1,16 @@
 .faq {
-    padding-top: 150px;
-    .faq-questions {
-        h2 {
-            margin-top: 0;
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-        p {
-            padding-left: 15px;
-        }
+  padding-top: 150px;
+  @media (max-width: 768px) {
+      padding-top: 70px;
+  }
+  .faq-questions {
+    h2 {
+      margin-top: 0;
+      font-size: 1.5em;
+      font-weight: bold;
     }
+    p {
+      padding-left: 15px;
+    }
+  }
 }
