--- a/frontend/src/styles/_product-detail.scss
+++ b/frontend/src/styles/_product-detail.scss
@@ -30,7 +30,6 @@
     background-color: $lightColor2;
     border: 1px solid $lightColor;
     padding: 6px;
-    padding-bottom: 0;
     &>.image {
       position: relative;
       margin-bottom: 6px;
@@ -70,6 +69,7 @@
         }
         .title {
           font-size: 0.85em;
+          margin-bottom: -6px;
         }
         &.active {
           .image img {
