--- a/frontend/src/styles/general/_jumbotron-slider.scss
+++ b/frontend/src/styles/general/_jumbotron-slider.scss
@@ -1,4 +1,12 @@
 .carousel {
+  .slider-slide {
+    height: 480px;
+    background-size: cover;
+    background-position: center;
+    @media (max-width: 768px) { 
+      height: 230px;
+    }
+  }
   z-index: 0;
   >.left,
   >.right {
@@ -34,6 +42,11 @@
     position: absolute;
     top: 50px;
     width: 100%;
-    text-align: center;
+    text-align: center;    
+    @media (max-width: 768px) { 
+      img {
+        width: 60%;
+      }
+    }
   }
 }
