--- a/frontend/src/styles/general/_product.scss
+++ b/frontend/src/styles/general/_product.scss
@@ -6,6 +6,7 @@
   margin-bottom: 15px;
   border: 1px solid #717171;
   background-color: #565656;
+  overflow: hidden;
   &:hover {
     .image .overlay {
       opacity: 1;
