Cleaned up CSS folder structure

--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -50,7 +50,7 @@
 
   <div class="product-grid">
     <h1>Hot items.</h1>
-    <div class="row visible-xs">
+    <div class="row row-padding-sm visible-xs">
       <div class="col-xs-3">
         <div class="product">
           <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
